--- a/vueapp/package.json
+++ b/vueapp/package.json
@@ -18,7 +18,12 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.12"
+    "node-sass": "^5.0.0",
+    "sass": "^1.32.6",
+    "sass-loader": "^7.2.1",
+    "style-loader": "^2.0.0",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.4.0"
   },
   "eslintConfig": {
     "root": true,
