--- a/vueapp/package.json
+++ b/vueapp/package.json
@@ -8,22 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.11",
     "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-router": "^4.5.11",
     "@vue/cli-service": "^4.5.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^5.0.0",
     "sass": "^1.32.6",
-    "sass-loader": "^7.2.1",
+    "sass-loader": "^7.3.1",
     "style-loader": "^2.0.0",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.4.0"
+    "webpack": "^4.46.0"
   },
   "eslintConfig": {
     "root": true,
@@ -37,7 +40,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+        "no-debugger": "off",
+        "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
