--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ MYSQL_DATA_DIR=./docker/mysql
 MYSQL_LOG_DIR=./docker/logs
 MYSQL_PORT=3307
 MYSQL_HOST=db
-MYSQL_DB=draftbook
+MYSQL_DB=ideabook
 MYSQL_USER=yii2
 MYSQL_PASSWORD=secret
 
 #APP CONFIG
-APPLICATION_NAME="Draftbook"
+APPLICATION_NAME="IdeaBook"
