Update db config, update quick start in readme

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ MYSQL_LOG_DIR=./docker/logs
 MYSQL_PORT=3307
 MYSQL_HOST=db
 MYSQL_DB=ideabook
-MYSQL_USER=yii2
+MYSQL_USER=root
 MYSQL_PASSWORD=secret
 
 #APP CONFIG
