--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     image: mysql:5.7
     restart: always
     environment:
+      MYSQL_USER: "${MYSQL_USER}"
       MYSQL_ROOT_PASSWORD: "${MYSQL_PASSWORD}"
       MYSQL_DATABASE: "${MYSQL_DB}"
     networks:
